@@ -51,7 +51,6 @@ import org.apache.hadoop.hdfs.server.namenode.INodeId;
 import org.apache.hadoop.hdfs.web.JsonUtil;
 import org.apache.hadoop.io.IOUtils;
 import org.apache.hadoop.util.LimitInputStream;
-import org.codehaus.jackson.map.ObjectMapper;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
@@ -258,10 +257,9 @@ class FSImageLoader {
    * @throws IOException if failed to serialize fileStatus to JSON.
    */
   String getFileStatus(String path) throws IOException {
-    ObjectMapper mapper = new ObjectMapper();
     FsImageProto.INodeSection.INode inode = fromINodeId(lookup(path));
     return "{\"FileStatus\":\n"
-        + mapper.writeValueAsString(getFileStatus(inode, false)) + "\n}\n";
+        + JsonUtil.toJsonString(getFileStatus(inode, false)) + "\n}\n";
   }
 
   /**
@@ -272,7 +270,6 @@ class FSImageLoader {
    */
   String listStatus(String path) throws IOException {
     StringBuilder sb = new StringBuilder();
-    ObjectMapper mapper = new ObjectMapper();
     List<Map<String, Object>> fileStatusList = getFileStatusList(path);
     sb.append("{\"FileStatuses\":{\"FileStatus\":[\n");
     int i = 0;
@@ -280,7 +277,7 @@ class FSImageLoader {
       if (i++ != 0) {
         sb.append(',');
       }
-      sb.append(mapper.writeValueAsString(fileStatusMap));
+      sb.append(JsonUtil.toJsonString(fileStatusMap));
     }
     sb.append("\n]}}\n");
     return sb.toString();
