@@ -29,6 +29,7 @@ import org.apache.hadoop.hdfs.web.URLConnectionFactory;
 import org.apache.hadoop.util.Timer;
 import org.apache.http.HttpStatus;
 import org.codehaus.jackson.map.ObjectMapper;
+import org.codehaus.jackson.map.ObjectReader;
 
 import java.io.IOException;
 import java.util.Map;
@@ -54,7 +55,9 @@ import static org.apache.hadoop.hdfs.web.oauth2.Utils.notNull;
 @InterfaceStability.Evolving
 public class ConfRefreshTokenBasedAccessTokenProvider
     extends AccessTokenProvider {
-  
+  private static final ObjectReader READER =
+      new ObjectMapper().reader(Map.class);
+
   public static final String OAUTH_REFRESH_TOKEN_KEY
       = "dfs.webhdfs.oauth2.refresh.token";
   public static final String OAUTH_REFRESH_TOKEN_EXPIRES_KEY
@@ -126,10 +129,7 @@ public class ConfRefreshTokenBasedAccessTokenProvider
             + responseBody.code() + ", text = " + responseBody.toString());
       }
 
-      ObjectMapper mapper = new ObjectMapper();
-      Map<?, ?> response = mapper.reader(Map.class)
-          .readValue(responseBody.body().string());
-
+      Map<?, ?> response = READER.readValue(responseBody.body().string());
 
       String newExpiresIn = response.get(EXPIRES_IN).toString();
       accessTokenTimer.setExpiresIn(newExpiresIn);
